DOWNLOAD: Fixed download link and font size issue on smaller screens

--- a/src/styles/_Aboutme.scss
+++ b/src/styles/_Aboutme.scss
@@ -21,7 +21,7 @@
     @include sm {
       .project-icon {
         padding: 2%;
-        font-size: 10px;
+        font-size: 15px;
       }
     }
 
@@ -92,7 +92,7 @@
     button {
       padding-right: 5%;
       padding-left: 5%;
-      font-size: $h2_sm - 10px;
+      font-size: $h2_sm - 8px;
     }
   }
 
